# meeting-doc-generator

./: .gitignore  README.md
api/: pyproject.toml
frontend/frontend/: package-lock.json
infra/: Dockerfile.api  Dockerfile.frontend
