[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Pango <bcamilo.aguirre@udea.edu.co>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "0.115.12"
uvicorn = "0.34.2"
azure-storage-blob = "^12.25.1"
azure-cognitiveservices-speech = "^1.44.0"
pydantic = "^2.11.4"
# CAMBIO CLAVE AQUÍ: Versión conocida por tener problemas de seguridad
SQLAlchemy = "1.4.36" 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
